aws/dev/deployments/echoserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: default
spec:
  selector:
    matchLabels:
      app: echoserver
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - image: k8s.gcr.io/e2e-test-images/echoserver:2.5
          name: echoserver
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: default
spec:
  selector:
    app: echoserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: echoserver
#   namespace: default
# spec:
#   ports:
#     - port: 8080
#       protocol: TCP
#   type: LoadBalancer
#   selector:
#     app: echoserver
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: echoserver
#   namespace: default
#   annotations:
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
# spec:
#   ingressClassName: alb
#   rules:
#     - host: echo.temedia.dev
#       http:
#         paths:
#           - path: /
#             pathType: Exact
#             backend:
#               service:
#                 name: echoserver
#                 port:
#                   number: 8080
